--- a/app_api/templates/todoDescriptionForm.pug
+++ b/app_api/templates/todoDescriptionForm.pug
@@ -1,3 +1,3 @@
 form(submit="/todoAddDesc", method="post")
-    p
-        | Provide a description for the task
+    p Provide a description for the task
+      input(name="description", type="string")
