--- a/app_api/templates/todoDuedateForm.pug
+++ b/app_api/templates/todoDuedateForm.pug
@@ -1,3 +1,3 @@
-form(submit="/todoSetDuedate" + todo.id, method="put")
-    input(name="dueDate", type="date")
-        | Provide a due date
+form(submit="/todoSetDuedate/" + todo.id, method="put")
+    p Provide a due date
+        input(name="dueDate", type="date")
