basic crud working

--- a/app_api/templates/todoViewTruncate.pug
+++ b/app_api/templates/todoViewTruncate.pug
@@ -1,5 +1,5 @@
 header
-  | TODO VIEW
+  | TODO VIEW #{taskDescription.length <= 10 ? taskDescription : taskDescription.substring(0,10) + '..'}
 p
   | Task: #{taskDescription}
   | Due: #{dueDate}
