--- a/src/app_api/templates/todoDone.pug
+++ b/src/app_api/templates/todoDone.pug
@@ -1,4 +1,4 @@
 if todos && todos.length > 0
   each todo in todos
-    option(href='/todo/view/'+todo.id) #{todo.taskDescription} #{todo.dueDate}
+    option(href='/view/'+todo.id) #{todo.taskDescription} #{todo.dueDate}
           
