--- a/src/app_api/templates/todoView.pug
+++ b/src/app_api/templates/todoView.pug
@@ -9,6 +9,6 @@ if status !== 'done'
 if status == 'done'
   option(href='/todoTodo/'+id, method='put')
     | Mark as todo
-option(href='/todo/'+id, method='delete')
+option(href='/'+id, method='delete')
   | Delete
 
