updating for latest structure

--- a/src/app_api/templates/todoLanding.pug
+++ b/src/app_api/templates/todoLanding.pug
@@ -1,6 +1,6 @@
 p
   | #{preBody}
-option(href='/form/desc/')
+option(href='/form/new/')
   | New todo
 option(href='/todoListdone/')
   | Done(#{doneCount})
