--- a/src/app_api/templates/todoDescriptionForm.pug
+++ b/src/app_api/templates/todoDescriptionForm.pug
@@ -1,3 +1,3 @@
-form(submit="/todoAddDesc", method="post")
+form(submit="/todoAddDesc", confirmation-needed="False", method="post")
     p Provide a description for the task
-        input(name="description", type="string")
+        input(name="description", type="string")    
