basic functions working

--- a/src/app_api/templates/todoDescriptionForm.pug
+++ b/src/app_api/templates/todoDescriptionForm.pug
@@ -1,3 +1,6 @@
-form(submit="/todoAddDesc", confirmation-needed="False", method="post")
-    p Provide a description for the task
-        input(name="description", type="string")    
+form(action="/todoAddDesc", confirmation-needed="False", method="post")
+    section(name="description")
+        header DESCRIPTION
+        p Provide a description for the task
+        input(type="text")
+        footer Reply with description or BACK
