--- a/src/app_api/templates/todoDuedateForm.pug
+++ b/src/app_api/templates/todoDuedateForm.pug
@@ -1,3 +1,7 @@
-form(submit="/todoSetDuedate/" + todo.id, method="put")
-    p Provide a due date
-        input(name="dueDate", type="date")
+form(action="/todoSetDuedate/" + todo.id, confirmation-needed="False", method="put")
+    section(name="dueDate")
+        header DUE DATE
+        p Provide a due date
+        input(type="date")
+        footer Reply with due date
+
