--- a/src/app_api/templates/todoView.pug
+++ b/src/app_api/templates/todoView.pug
@@ -1,14 +1,13 @@
-header
-  | TODO VIEW
-p
-  | Task: #{taskDescription}
-  | Due: #{dueDate}
-if status !== 'done'
-  option(href='/todoDone/'+id, method='put')
-    | Mark as done
-if status == 'done'
-  option(href='/todoTodo/'+id, method='put')
-    | Mark as todo
-option(href='/'+id, method='delete')
-  | Delete
-
+section
+  header VIEW
+  ul
+    li Task: #{taskDescription}
+    li Due: #{dueDate}
+    if status !== 'done'
+      li
+        a(href='/todoDone/'+id, method='put') Mark as done
+    if status == 'done'
+      li
+        a(href='/todoTodo/'+id, method='put') Mark as todo
+    li
+      a(href='/'+id, method='delete') Delete
