--- a/src/app_api/templates/todoViewTruncate.pug
+++ b/src/app_api/templates/todoViewTruncate.pug
@@ -1,15 +1,16 @@
-header
-  | TODO VIEW #{taskDescription.length <= 10 ? taskDescription : taskDescription.substring(0,10) + '..'}
-p
-  | Task: #{taskDescription}
-  | Due: #{dueDate}
-if status !== 'done'
-  option(href='/todoDone/'+id, method='put')
-    | Mark as done
-if status == 'done'
-  option(href='/todoTodo/'+id, method='put')
-    | Mark as todo
-option(href='/'+id, method='delete')
-  | Delete
-option(href='/todoEdit/'+id)
-  | Edit
+section
+	header
+	  | TODO VIEW #{taskDescription.length <= 10 ? taskDescription : taskDescription.substring(0,10) + '..'}
+	p
+	  | Task: #{taskDescription}
+	  | Due: #{dueDate}
+	if status !== 'done'
+	  option(href='/todoDone/'+id, method='put')
+	    | Mark as done
+	if status == 'done'
+	  option(href='/todoTodo/'+id, method='put')
+	    | Mark as todo
+	option(href='/'+id, method='delete')
+	  | Delete
+	option(href='/todoEdit/'+id)
+	  | Edit
