testing number type

--- a/src/app_api/templates/todoForm.pug
+++ b/src/app_api/templates/todoForm.pug
@@ -2,7 +2,7 @@ form(action="/todoAdd", confirmation-needed="True", method="post")
     section(name="description")
         header DESCRIPTION
         p Provide a description for the task
-        input(type="text")
+        input(type="number")
         footer Reply with description or BACK
     section(name="dueDate")
         header DUE DATE
