--- a/src/app_api/templates/todoForm.pug
+++ b/src/app_api/templates/todoForm.pug
@@ -1,8 +1,8 @@
-form(action="/todoAdd", confirmation-needed="True", method="post")
+form(action="/todoAdd", skip-confirmation=false, method="post")
     section(name="description")
         header DESCRIPTION
         p Provide a description for the task
-        input(type="number")
+        input(type="text")
         footer Reply with description or BACK
     section(name="dueDate")
         header DUE DATE
