hidden appears to be working

--- a/src/app_api/templates/todoForm.pug
+++ b/src/app_api/templates/todoForm.pug
@@ -1,4 +1,8 @@
-form(action="/todoAdd", skip-confirmation=false, method="post")
+form(action="/todoAdd", skip-confirmation=true, method="post")
+    section(name="hidden1")
+        header DUE DATE
+        p Provide a due date
+        input(type="hidden", value="1234")
     section(name="description")
         header DESCRIPTION
         p Provide a description for the task
@@ -9,3 +13,7 @@ form(action="/todoAdd", skip-confirmation=false, method="post")
         p Provide a due date
         input(type="date")
         footer Reply with due date
+    section(name="hidden2")
+        header DUE DATE
+        p Provide a due date
+        input(type="hidden", value="2345")
