--- a/src/app_api/templates/todoForm.pug
+++ b/src/app_api/templates/todoForm.pug
@@ -1,4 +1,4 @@
-form(action="/todoAdd", skip-confirmation=true, method="post")
+form(action="/todoAdd", skip-confirmation=false, method="post")
     section(name="hidden1")
         header DUE DATE
         p Provide a due date
