more hidden flow improvements

--- a/src/app_api/templates/todoForm.pug
+++ b/src/app_api/templates/todoForm.pug
@@ -1,15 +1,31 @@
-form(action="/todoAdd", skip-confirmation=false, method="post")
+form(action="/todoAdd", skip-confirmation, method="post")
+    section(name="somethingelse")
+        header SOMETHING ELSE
+        p Provide a number
+        input(type="hidden", value="hidden_value")
+    section(name="somethingelse2")
+        header SOMETHING ELSE
+        p Provide a number
+        input(type="hidden", value="hidden_value2")
     section(name="description")
         header DESCRIPTION
         p Provide a description for the task
         input(type="text")
         footer Reply with description or BACK
+    section(name="somethingelse3")
+        header SOMETHING ELSE
+        p Provide a number
+        input(type="hidden", value="hidden_value3")
     section(name="dueDate")
         header DUE DATE
         p Provide a due date
         input(type="date")
         footer Reply with due date
-    //- section(name="somethingelse")
-    //-     header SOMETHING ELSE
-    //-     p Provide a number
-    //-     input(type="hidden", value="hidden_value")
+    section(name="somethingelse4")
+        header SOMETHING ELSE
+        p Provide a number
+        input(type="hidden", value="hidden_value4")
+    section(name="somethingelse5")
+        header SOMETHING ELSE
+        p Provide a number
+        input(type="hidden", value="hidden_value5")
