--- a/src/app_api/templates/todoForm.pug
+++ b/src/app_api/templates/todoForm.pug
@@ -1,8 +1,8 @@
 form(action="/todoAdd", skip-confirmation, method="post")
     section(name="somethingelse")
         header SOMETHING ELSE
-        p Provide a number
-        input(type="hidden", value="hidden_value")
+        p Provide a number yeah
+        input(type="number", step="1", minlength-error="minlength error text")
     section(name="somethingelse2")
         header SOMETHING ELSE
         p Provide a number
