--- a/src/app_api/templates/todoFormFields.pug
+++ b/src/app_api/templates/todoFormFields.pug
@@ -4,6 +4,16 @@ form(action="/todoAdd", skip-confirmation="true", method="post")
         p Provide a description for the task
         input(type="text")
         footer Reply with description or BACK
+    section(name="description2" required="true")
+        header DESCRIPTION2
+        p Provide a description2 for the task
+        input(type="text")
+        footer Reply with description2 or BACK
+    section(name="description3" required="true")
+        header DESCRIPTION2
+        p Provide a description3 for the task
+        input(type="text")
+        footer Reply with description3 or BACK
     section(name="dueDate" required="true")
         header DUE DATE
         p Provide a due date
