revert default form

--- a/src/app_api/templates/todoForm.pug
+++ b/src/app_api/templates/todoForm.pug
@@ -1,44 +1,11 @@
-form(action="/todoAdd", skip-confirmation, method="post")
-    //- section(name="dataCenter_assets" default="0")
-    //-     header Data Center IT Assets
-    //-     p Check the type of assets you have.
-    //-     ul
-    //-         li(value="Servers") Servers
-    //-         li(value="Switches_and_Routers") Switches & Routers
-    //-         li(value="Firewalls_Hubs_Bridges_and_Gateways") Firewalls, Hubs, Bridges & Gateways
-    section(name="1_Servers_And_Storage" default="0")
-        header Servers & Storage
-        p How many servers or storage devices? 
-        p (Default = 0)
-        input(type="number" step="1")
-        footer Reply with number
-    section(name="2_Switches_And_Routers" default="0")
-        header Switches & Routers
-        p How many switches and/or routers? 
-        p (Default = 0)
-        input(type="number" step="1")
-        footer Reply with number
-    section(name="3_Firewalls-Gateways_And_Others" default="0")
-        header Firewalls, Gateways & Others
-        p How many firewalls, bridges, hubs and/or gateways? 
-        p (Default = 0)
-        input(type="number" step="1")
-        footer Reply with number
-    section(name="4_Equipment_Location")
-        header Location
-        p Where is this equipment?
-        ul
-            li(value="shop") Shop/business
-            li(value="storage") Storage
-    section(name="5_Inspect" default="now")
-        header Inspect
-        p When is it available for inspection?
-        p example: now, after 3 weeks, after 2 months 
-        p (default=now)
+form(action="/todoAdd", skip-confirmation="true", method="post")
+    section(name="description" required="true")
+        header DESCRIPTION
+        p Provide a description for the task
+        input(type="text")
+        footer Reply with description or BACK
+    section(name="dueDate" required="true")
+        header DUE DATE
+        p Provide a due date
         input(type="date")
-    section(name="6_Pickup" default="now")
-        header Pickup
-        p When would it be available for pickup?
-        p example: now, after 3 weeks, after 2 months 
-        p (default=now)
-        input(type="date")
+        footer Reply with due date
