--- a/src/app_api/templates/todoForm.pug
+++ b/src/app_api/templates/todoForm.pug
@@ -1,4 +1,4 @@
-form(action="/todoAdd", skip-confirmation="true", method="post")
+form(action="/todoAdd", method="post")
     section(name="description" required="true")
         header DESCRIPTION
         p Provide a description for the task
