--- a/src/app_api/templates/todoLandingMedia.pug
+++ b/src/app_api/templates/todoLandingMedia.pug
@@ -5,8 +5,8 @@ section
   video(src="http://techslides.com/demos/sample-videos/small.mp4" alt="alt text")
   ul
     li
-        a(href='/form/new/')
-          video(src="https://placekitten.com/600/600" alt="alt text 2")
+        a(href='/form/new/') New todo
+          img(src="https://placekitten.com/600/600" alt="alt text 2")
     li
         a(href='/form/new/') New todo
           video(src="http://techslides.com/demos/sample-videos/small.mp4" alt="alt text 3")
