--- a/src/app_api/templates/todoLanding.pug
+++ b/src/app_api/templates/todoLanding.pug
@@ -2,14 +2,9 @@ section
   header Menu1
   if prebody
     p prebody
-  video(src="http://techslides.com/demos/sample-videos/small.mp4" alt="alt text")
   ul
     li
-        a(href='/form/new/') New todo
-          img(src="https://placekitten.com/600/600" alt="alt text 2")
-    li
-        a(href='/form/new/') New todo
-          video(src="http://techslides.com/demos/sample-videos/small.mp4" alt="alt text 3")
+        a(href='/form/new/') New Todo
     li
         a(href='/todoListdone/') Done(#{doneCount})
     li Todo (#{todoCount}):
